Moving logic to model
